AuthGoogle **Falta poner estilos en account**

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,11 @@
 
 </head>
 
-<body class="mat-typography">
-  <app-root></app-root>
+<body  >
+  <div >
+    <app-root ></app-root>
+
+  </div>
 </body>
 
 </html>
